--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <!--API-->
     <script src="https://unpkg.com/scrollreveal"></script>
 
-    <link rel="stylesheet" href="/estilo/section1.css">
-    <link rel="stylesheet" href="/estilo/section2.css">
-    <link rel="stylesheet" href="/estilo/section3.css">
-    <link rel="stylesheet" href="/estilo/section4.css">
-    <link rel="stylesheet" href="/estilo/section5.css">
-    <link rel="stylesheet" href="/estilo/responsive.css">
-    <link rel="stylesheet" href="/estilo/scrollReveal.css">
+    <link rel="stylesheet" href="estilo/section1.css">
+    <link rel="stylesheet" href="estilo/section2.css">
+    <link rel="stylesheet" href="estilo/section3.css">
+    <link rel="stylesheet" href="estilo/section4.css">
+    <link rel="stylesheet" href="estilo/section5.css">
+    <link rel="stylesheet" href="estilo/responsive.css">
+    <link rel="stylesheet" href="estilo/scrollReveal.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
