--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <a href="https://wa.me/5541988707816?text=Olá,%20Eduardo!%20Vi%20seu%20portfolio%20e%20gostaria%20de%20conversar%20com%20você." target="_blank">Entrar em contato </a>
                         </div>
                         <div class="btn-hero btn-2">
-                            <a href="download/Currículo-Eduardo-Skrock.pdf" download="curriculum_eduardo_skrock">Baixar Curriculo | PDF</a>
+                            <a href="download/curriculo-eduardo-skrock.pdf" download="curriculum_eduardo_skrock">Baixar Curriculo | PDF</a>
                         </div>
                     </div>
                     
